# YAR

./: CMakeLists.txt
include/glad/: glad.h
src/: Model.cpp  Model.h  glad.c  main.cpp  shader.cpp  shader.h
